--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
         <div class="circle-trans"></div>
         <div class="circle"></div>
         <div class="profile-info">
-            <div class="profile-img"><img
-                    src="./img/IMG-20201213-WA0378.jpg" alt=""></div>
-            <p >¡Hola! Soy Andrés Lombardo, un
-                apasionado de la programación. Me gradué como Técnico en Informática en el año 2019 en la Escuela De
+            <div class="profile-img"><img src="./img/IMG-20201213-WA0378.jpg" alt=""></div>
+            <p>¡Hola! Soy Andrés Lombardo, un
+                apasionado de la programación. Me gradué como Técnico en Informática en el año 2018 en la Escuela De
                 Educación Secundaria Técnica Nº1 "Mariano Moreno", y desde entonces, he estado explorando en el mundo
                 del desarrollo de sofware. Mi principal objetivo es crear experiencias digitales atractivas y
                 funcionales, combinando tanto el diseño estético como la lógica detrás de cada proyecto. Me encanta
@@ -79,7 +78,7 @@
             </p>
         </div>
     </section>
-    <section class="skills" >
+    <section class="skills">
         <h2 class="title-secction">Mis Habilidades</h2>
         <div class="skill-list">
             <div class="skill">
@@ -152,9 +151,38 @@
 
                 </div>
             </div>
-            
+
+            <div class="item disenio">
+                <img src="img\rest-api.png" alt="">
+                <div class="info">
+                    <h3>Rest API con JWT, Roles, Autorización y Autenticación</h3>
+                    <span>Node.JS</span>
+                    <span>MongoDB</span>
+                    <div>
+                        <a href="https://github.com/andreslombardo9/REST-API-con-JWT-Roles-Autorizacion-y-Autenticacion-/tree/main/src"
+                            target="_blank"><i class="fa-brands fa-github"></i>Repositorio</a>
+                    </div>
+
                 </div>
             </div>
+            <div class="item disenio">
+                <img src="img\taskphoto.png" alt="">
+                <div class="info">
+                    <h3>Task Crud, Autenticación</h3>
+                    <span>React</span>
+                    <span>TailwindCSS</span>
+                    <span>Node.JS</span>
+                    <span>MongoDB</span>
+
+                    <div>
+                        <a href="https://github.com/andreslombardo9/TaskCrud"
+                            target="_blank"><i class="fa-brands fa-github"></i>Repositorio</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
         </div>
         </div>
     </section>
